add sidebar and hotel veiw

--- a/index.html
+++ b/index.html
@@ -46,8 +46,103 @@
                 </nav>
             </header>
             <div class="content">
-                <div class="sidebar">sidebar</div>
-                <div class="hotel-view">hotel view</div>
+                <nav class="sidebar">
+                        <ul class="sidebar-nav">
+                            <li class="sidebar-nav__item sidebar-nav__item--active">
+                                <a href="#" class="sidebar-nav__link ">
+                                    <svg class="sidebar-nav__icon">
+                                        <use xlink:href="img/sprite.svg#icon-home"></use>
+                                    </svg>
+                                    <span>Hotel</span>
+                                </a>
+
+                            </li>
+                            <li class="sidebar-nav__item">
+                                <a href="#" class="sidebar-nav__link">
+                                    <svg class="sidebar-nav__icon">
+                                        <use xlink:href="img/sprite.svg#icon-aircraft-take-off"></use>
+                                    </svg>
+                                    <span>flight</span>
+                                </a>
+
+                            </li>
+                            <li class="sidebar-nav__item">
+                                <a href="#" class="sidebar-nav__link">
+                                    <svg class="sidebar-nav__icon">
+                                        <use xlink:href="img/sprite.svg#icon-key"></use>
+                                    </svg>
+                                    <span>Car rental</span>
+                                </a>
+
+                            </li>
+                            <li class="sidebar-nav__item">
+                                <a href="#" class="sidebar-nav__link">
+                                    <svg class="sidebar-nav__icon">
+                                        <use xlink:href="img/sprite.svg#icon-map"></use>
+                                    </svg>
+                                    <span>tours</span>
+                                </a>
+
+                            </li>
+                        </ul>
+                        
+                        <div class="legal">
+                             &copy; All rights reserved by gk 
+                        </div>
+                </nav>
+                <main class="hotel-view">
+                    <div class="gellary">
+                        <figure class="gellary__item" >
+                            <img class="gellary__photo" src="img/hotel-1.jpg" alt="gellary Photot 1">
+                        </figure>
+                        <figure class="gellary__item" >
+                            <img class="gellary__photo" src="img/hotel-2.jpg" alt="gellary Photot 2">
+                        </figure>
+                        <figure class="gellary__item" >
+                            <img class="gellary__photo" src="img/hotel-3.jpg" alt="gellary Photot 3">
+                        </figure>
+                        
+                    </div>
+
+                    <div class="overview">
+                        <h1 class="overview__heading">
+                            Hotel Las Palmas
+                        </h1>
+                        <div class="overview__stars">
+                            <svg class="overview__icon-star">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                        </div>
+                        <div class="overview__location">
+                            <svg class="overview__icon-location">
+                                <use xlink:href="img/sprite.svg#icon-location-pin"></use>
+                            </svg>
+                            <button class="button-inline">Albufeira, Portugal</button>
+                        </div>
+
+                        <div class="overview__rating">
+                            <div class="overview__rating-average">
+                                8.5
+                            </div>
+                            <div class="overview__rating-count">
+                                455 votes
+                            </div>
+                        </div>
+                    </div>
+
+                </main>
             </div>
         </div>
     </body>
