--- a/index.html
+++ b/index.html
@@ -210,6 +210,16 @@
 
                     </div>
 
+                    <div class="cta">
+                        <h2 class="cta__text">
+                            Good news! We have 4 rooms for your selected dates!
+                        </h2>
+                        <button class="btn">
+                            <div class="btn__visible">book now!</div>
+                            <div class="btn__invisible">Only 4 rooms left</div>
+                            
+                        </button>
+                    </div>
                 </main>
             </div>
         </div>
